# 2DPixelArtRougelitePOO

./: README.md  SConstruct
demo/: CMakeLists.txt  New Text Document.txt  main.cpp
project/: project.godot
project/resources/: animatii.res
project/resources/ui/: heart_ui_empty.png.import  heart_ui_full.png.import
project/resources/world/: Basic Charakter Actions.png.import  Basic Charakter Spritesheet-Sheet.png.import  Basic Charakter Spritesheet.png.import  Grassland_tileset_basic.png.import  bush.png.import  cliff_tileset.png.import  dirt_tileset.png.import  dirt_tileset.tres  grass.png.import  grass_background.png.import  nesitems.png.import  player.png.import  tree.png.import
project/scenes/: bush.tscn  enemy_node.tscn  hearts_ui.tscn  player.tscn  potion.tscn  tree.tscn  world.tscn
src/: bush_node.cpp  bush_node.h  enemy_node.cpp  enemy_node.h  hud_node.cpp  hud_node.h  player_node.cpp  player_node.h  potion_node.cpp  potion_node.h  register_types.cpp  spawner_node.cpp  spawner_node.h
src/core/: characters.cpp  consumable.cpp  consumable.h  enemy.h  entity.cpp  entity.h  game_manager.cpp  game_manager.h  inventory.h  item.h  object_pool.h  player.cpp  player.h  stats.cpp  stats.h  types.h
